--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\tests\TestBatchRender.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\TestBatchRenderColors.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\vendor\glm\detail\func_common.inl">
@@ -484,6 +487,7 @@
     </None>
     <None Include="res\shaders\Texture.shader" />
     <None Include="res\shaders\White.shader" />
+    <None Include="res\shaders\VertexColors.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h">
@@ -1390,6 +1394,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\TestBatchRender.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\TestBatchRenderColors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
